Correct Login Page Display

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -18,6 +18,10 @@ page-login {
         border: none;
     }
 
+    .select-md {
+   		max-width: initial;
+    }
+
     @media(max-width: 1023px){
         #headerLogo {
             width: 192px;
