Style and Voting Improvments
0.2.4

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,10 +1,12 @@
 page-login {
 	#qrIcon, #fingerIcon {
-        font-size: 2em;
+        font-size: 1.75em;
         margin: 0;
         padding: 0 0.4em;
         height: 100%;
-        color: #555;
+        color: #777;
+        top: 13px;
+    	position: relative;
     }
 
     #loginLogo {
