--- a/src/pages/send-modal/send-modal.scss
+++ b/src/pages/send-modal/send-modal.scss
@@ -14,9 +14,12 @@ page-send-modal {
     }
 
     #qrIcon, #fingerIcon {
-        font-size: 2em;
+        font-size: 1.75em;
         margin: 0;
         padding: 0 0.4em;
         height: 100%;
+        color: #777;
+        top: 13px;
+    	position: relative;
     }
 }
