--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -8,12 +8,21 @@ page-home {
         font-size: 1.5em;
     }
 
+    h4 {
+    	margin: 0;
+    }
+
 	.success {
         color: #32db64;
     }
 
     .danger {
         color: #f53d3d;
+    }
+
+    .feeTxt {
+   		font-size: 80%;
+    	opacity: 0.7;
     }
 
     .ngx-pagination {
