New Default Font

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -15,6 +15,11 @@
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
 
+@font-face {
+    font-family: SourceSansPro;
+    src: url("../assets/fonts/SourceSansPro/SourceSansPro-Regular.ttf");
+}
+
 @media(max-width: 575px){
     ion-app.md {
     	font-size: 1.3rem;
