--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -22,6 +22,11 @@ $app-direction: ltr;
 // To view all the possible Ionic variables, see:
 // http://ionicframework.com/docs/theming/overriding-ionic-variables/
 
+$font-family-base: 'SourceSansPro';
+$font-family-ios-base: 'SourceSansPro';
+$font-family-md-base: 'SourceSansPro';
+$font-family-wp-base: 'SourceSansPro';
+
 $toolbar-background: #3d4db8;
 
 
