Msg on screenshot error and select for sending to contact

--- a/src/pages/send-modal/send-modal.scss
+++ b/src/pages/send-modal/send-modal.scss
@@ -13,7 +13,7 @@ page-send-modal {
     	border-radius: 2px;
     }
 
-    #qrIcon, #fingerIcon {
+    #qrIcon, #fingerIcon, #contactsIcon {
         font-size: 1.75em;
         margin: 0;
         padding: 0 0.4em;
