Add currency converter for balance

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,6 +12,15 @@ page-home {
     	margin: 0;
     }
 
+    h6 {
+    	margin: 0;
+    }
+
+    .select-md {
+    	padding: 0 8px;
+	    display: inline-flex;
+	}
+
 	.success {
         color: #32db64;
     }
