Added fingerprint wizard

--- a/src/pages/fingerprint-wizard/fingerprint-wizard.scss
+++ b/src/pages/fingerprint-wizard/fingerprint-wizard.scss
@@ -1,3 +1,11 @@
 page-fingerprint-wizard {
-
+	#qrIcon {
+        font-size: 1.75em;
+        margin: 0;
+        padding: 0 0.4em;
+        height: 100%;
+        color: #777;
+        top: 13px;
+    	position: relative;
+    }
 }
