--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,14 @@
 page-login {
-	#qrIcon, #fingerIcon {
+	#fingerIcon {
+        font-size: 1.75em;
+        margin: 0;
+        padding: 0 0.4em;
+        height: 100%;
+        color: #777;
+    	position: relative;
+    }
+
+    #qrIcon {
         font-size: 1.75em;
         margin: 0;
         padding: 0 0.4em;
