Start with LoginPage, not HomePage

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,14 +1,5 @@
 page-login {
-	#fingerIcon {
-        font-size: 1.75em;
-        margin: 0;
-        padding: 0 0.4em;
-        height: 100%;
-        color: #777;
-    	position: relative;
-    }
-
-    #qrIcon {
+	#qrIcon, #fingerIcon {
         font-size: 1.75em;
         margin: 0;
         padding: 0 0.4em;
