--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,5 +1,5 @@
 page-login {
-	#qrIcon, #fingerIcon {
+	#pinIcon, #qrIcon, #fingerIcon {
         font-size: 1.75em;
         margin: 0;
         padding: 0 0.4em;
