Update for Lisk Core 1.0
Also added % change of price

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -71,6 +71,10 @@ page-home {
     	opacity: 0.7;
     }
 
+    .change24 {
+        font-size: 80%;
+    }
+
     .ngx-pagination {
     	text-align: center;
     }
